--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -26,7 +25,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/email"
             android:hint="Email or phone number"
-            android:textSize="30dp"
+            android:textSize="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp">
 
@@ -36,7 +35,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/password"
             android:hint="Password"
-            android:textSize="30dp"
+            android:textSize="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp">
 
@@ -48,7 +47,7 @@
             android:text=" Forgot Password?"
             android:textSize="20dp"
             android:gravity="right"
-            android:textColorLink="@color/cardview_light_background">
+            android:layout_marginRight="10dp">
 
         </TextView>
         <Button
@@ -65,11 +64,12 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:text="Don't have an account?"
             android:id="@+id/dont"
-            android:textSize="20dp">
+            android:textSize="20dp"
+            android:layout_marginLeft="10dp">
 
         </TextView>
             <TextView
@@ -82,4 +82,3 @@
             </TextView>
         </LinearLayout>
     </LinearLayout>
-</layout>
